k8s/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bustani-app
  labels:
    app: bustani
spec:
  selector:
    app: bustani
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
