k8s/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bustani-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bustani.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bustani-app
                port:
                  number: 80
